// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all menu flags OFF: the BASE menu composite (dark false): tree identical to BASE 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row-reverse",
          "gap": 12,
          "position": "absolute",
          "right": 18,
        },
        {
          "top": 42,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Dark mode"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ☾
      </Text>
    </View>
    <View
      accessibilityLabel="Sound"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ♪
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "marginBottom": 56,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 51.52,
            "justifyContent": "center",
            "width": 51.52,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            {
              "testUri": "../../../assets/images/mark.png",
            }
          }
          style={
            {
              "height": 80.5,
              "marginTop": -2.24,
              "width": 80.5,
            }
          }
        />
      </View>
      <Text
        style={
          {
            "color": "#191724",
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 56,
            "includeFontPadding": false,
            "letterSpacing": 0.56,
            "marginLeft": 2.24,
          }
        }
      >
        rrows
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 24,
            "letterSpacing": 0.5,
            "marginTop": 30,
          },
          {
            "color": "#8F76F0",
          },
        ]
      }
    >
      Level 
      25
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_600SemiBold",
            "fontSize": 15,
            "letterSpacing": 0.5,
            "marginTop": 6,
          },
          {
            "color": "#6D6988",
          },
        ]
      }
    >
      Normal
    </Text>
  </View>
  <View
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 34,
            "height": 68,
            "justifyContent": "center",
            "width": 250,
          },
          {
            "backgroundColor": "#6D4AEF",
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 22,
              "letterSpacing": 1,
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Play
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "Fredoka_600SemiBold",
          "fontSize": 13,
          "position": "absolute",
        },
        {
          "bottom": 88,
          "color": "#6D6988",
        },
      ]
    }
  >
    24 puzzles solved   ·   6-day streak   ·   best perfect run 4
  </Text>
</View>
`;

exports[`all menu flags OFF: the BASE menu composite (dark true): tree identical to BASE 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#13111C",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row-reverse",
          "gap": 12,
          "position": "absolute",
          "right": 18,
        },
        {
          "top": 42,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Dark mode"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#201D30",
          "borderColor": "#69629E",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#CBC4F0",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ☀
      </Text>
    </View>
    <View
      accessibilityLabel="Sound"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#201D30",
          "borderColor": "#69629E",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#CBC4F0",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ♪
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "marginBottom": 56,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 51.52,
            "justifyContent": "center",
            "width": 51.52,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            {
              "testUri": "../../../assets/images/mark.png",
            }
          }
          style={
            {
              "height": 80.5,
              "marginTop": -2.24,
              "width": 80.5,
            }
          }
        />
      </View>
      <Text
        style={
          {
            "color": "#EFEDF9",
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 56,
            "includeFontPadding": false,
            "letterSpacing": 0.56,
            "marginLeft": 2.24,
          }
        }
      >
        rrows
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 24,
            "letterSpacing": 0.5,
            "marginTop": 30,
          },
          {
            "color": "#A98FF8",
          },
        ]
      }
    >
      Level 
      25
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_600SemiBold",
            "fontSize": 15,
            "letterSpacing": 0.5,
            "marginTop": 6,
          },
          {
            "color": "#A29DC1",
          },
        ]
      }
    >
      Normal
    </Text>
  </View>
  <View
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 34,
            "height": 68,
            "justifyContent": "center",
            "width": 250,
          },
          {
            "backgroundColor": "#7B5BF5",
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 22,
              "letterSpacing": 1,
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Play
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "Fredoka_600SemiBold",
          "fontSize": 13,
          "position": "absolute",
        },
        {
          "bottom": 88,
          "color": "#A29DC1",
        },
      ]
    }
  >
    24 puzzles solved   ·   6-day streak   ·   best perfect run 4
  </Text>
</View>
`;

exports[`all menu flags OFF: the BASE menu compositeDone (dark false): tree identical to BASE 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row-reverse",
          "gap": 12,
          "position": "absolute",
          "right": 18,
        },
        {
          "top": 42,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Dark mode"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ☾
      </Text>
    </View>
    <View
      accessibilityLabel="Sound"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ♪
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "marginBottom": 56,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 51.52,
            "justifyContent": "center",
            "width": 51.52,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            {
              "testUri": "../../../assets/images/mark.png",
            }
          }
          style={
            {
              "height": 80.5,
              "marginTop": -2.24,
              "width": 80.5,
            }
          }
        />
      </View>
      <Text
        style={
          {
            "color": "#191724",
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 56,
            "includeFontPadding": false,
            "letterSpacing": 0.56,
            "marginLeft": 2.24,
          }
        }
      >
        rrows
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 24,
            "letterSpacing": 0.5,
            "marginTop": 30,
          },
          {
            "color": "#8F76F0",
          },
        ]
      }
    >
      Level 
      25
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_600SemiBold",
            "fontSize": 15,
            "letterSpacing": 0.5,
            "marginTop": 6,
          },
          {
            "color": "#6D6988",
          },
        ]
      }
    >
      Normal
    </Text>
  </View>
  <View
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 34,
            "height": 68,
            "justifyContent": "center",
            "width": 250,
          },
          {
            "backgroundColor": "#6D4AEF",
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 22,
              "letterSpacing": 1,
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Play
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "Fredoka_600SemiBold",
          "fontSize": 13,
          "position": "absolute",
        },
        {
          "bottom": 88,
          "color": "#6D6988",
        },
      ]
    }
  >
    24 puzzles solved   ·   6-day streak   ·   best perfect run 4
  </Text>
</View>
`;

exports[`all menu flags OFF: the BASE menu fresh (dark false): tree identical to BASE 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row-reverse",
          "gap": 12,
          "position": "absolute",
          "right": 18,
        },
        {
          "top": 42,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Dark mode"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ☾
      </Text>
    </View>
    <View
      accessibilityLabel="Sound"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ♪
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "marginBottom": 56,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 51.52,
            "justifyContent": "center",
            "width": 51.52,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            {
              "testUri": "../../../assets/images/mark.png",
            }
          }
          style={
            {
              "height": 80.5,
              "marginTop": -2.24,
              "width": 80.5,
            }
          }
        />
      </View>
      <Text
        style={
          {
            "color": "#191724",
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 56,
            "includeFontPadding": false,
            "letterSpacing": 0.56,
            "marginLeft": 2.24,
          }
        }
      >
        rrows
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 24,
            "letterSpacing": 0.5,
            "marginTop": 30,
          },
          {
            "color": "#8F76F0",
          },
        ]
      }
    >
      Level 
      1
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_600SemiBold",
            "fontSize": 15,
            "letterSpacing": 0.5,
            "marginTop": 6,
          },
          {
            "color": "#6D6988",
          },
        ]
      }
    >
      Normal
    </Text>
  </View>
  <View
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 34,
            "height": 68,
            "justifyContent": "center",
            "width": 250,
          },
          {
            "backgroundColor": "#6D4AEF",
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 22,
              "letterSpacing": 1,
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Play
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "Fredoka_600SemiBold",
          "fontSize": 13,
          "position": "absolute",
        },
        {
          "bottom": 88,
          "color": "#6D6988",
        },
      ]
    }
  />
</View>
`;

exports[`all menu flags OFF: the BASE menu fresh (dark true): tree identical to BASE 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#13111C",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row-reverse",
          "gap": 12,
          "position": "absolute",
          "right": 18,
        },
        {
          "top": 42,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Dark mode"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#201D30",
          "borderColor": "#69629E",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#CBC4F0",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ☀
      </Text>
    </View>
    <View
      accessibilityLabel="Sound"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#201D30",
          "borderColor": "#69629E",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#CBC4F0",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ♪
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "marginBottom": 56,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 51.52,
            "justifyContent": "center",
            "width": 51.52,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            {
              "testUri": "../../../assets/images/mark.png",
            }
          }
          style={
            {
              "height": 80.5,
              "marginTop": -2.24,
              "width": 80.5,
            }
          }
        />
      </View>
      <Text
        style={
          {
            "color": "#EFEDF9",
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 56,
            "includeFontPadding": false,
            "letterSpacing": 0.56,
            "marginLeft": 2.24,
          }
        }
      >
        rrows
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 24,
            "letterSpacing": 0.5,
            "marginTop": 30,
          },
          {
            "color": "#A98FF8",
          },
        ]
      }
    >
      Level 
      1
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_600SemiBold",
            "fontSize": 15,
            "letterSpacing": 0.5,
            "marginTop": 6,
          },
          {
            "color": "#A29DC1",
          },
        ]
      }
    >
      Normal
    </Text>
  </View>
  <View
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 34,
            "height": 68,
            "justifyContent": "center",
            "width": 250,
          },
          {
            "backgroundColor": "#7B5BF5",
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 22,
              "letterSpacing": 1,
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Play
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "Fredoka_600SemiBold",
          "fontSize": 13,
          "position": "absolute",
        },
        {
          "bottom": 88,
          "color": "#A29DC1",
        },
      ]
    }
  />
</View>
`;

exports[`all menu flags OFF: the BASE menu oneSolve (dark false): tree identical to BASE 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row-reverse",
          "gap": 12,
          "position": "absolute",
          "right": 18,
        },
        {
          "top": 42,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Dark mode"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ☾
      </Text>
    </View>
    <View
      accessibilityLabel="Sound"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ♪
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "marginBottom": 56,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 51.52,
            "justifyContent": "center",
            "width": 51.52,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            {
              "testUri": "../../../assets/images/mark.png",
            }
          }
          style={
            {
              "height": 80.5,
              "marginTop": -2.24,
              "width": 80.5,
            }
          }
        />
      </View>
      <Text
        style={
          {
            "color": "#191724",
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 56,
            "includeFontPadding": false,
            "letterSpacing": 0.56,
            "marginLeft": 2.24,
          }
        }
      >
        rrows
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 24,
            "letterSpacing": 0.5,
            "marginTop": 30,
          },
          {
            "color": "#8F76F0",
          },
        ]
      }
    >
      Level 
      2
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_600SemiBold",
            "fontSize": 15,
            "letterSpacing": 0.5,
            "marginTop": 6,
          },
          {
            "color": "#6D6988",
          },
        ]
      }
    >
      Normal
    </Text>
  </View>
  <View
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 34,
            "height": 68,
            "justifyContent": "center",
            "width": 250,
          },
          {
            "backgroundColor": "#6D4AEF",
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 22,
              "letterSpacing": 1,
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Play
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "Fredoka_600SemiBold",
          "fontSize": 13,
          "position": "absolute",
        },
        {
          "bottom": 88,
          "color": "#6D6988",
        },
      ]
    }
  >
    1 puzzle solved
  </Text>
</View>
`;
